--- a/src/assets/components/title/_title.scss
+++ b/src/assets/components/title/_title.scss
@@ -1,6 +1,6 @@
 .title-input {
     width: 100%;
-
+    color: $mainColor;
     .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
         color: $mainColor;
         font-size: $text-lg;
