--- a/src/assets/components/title/_title.scss
+++ b/src/assets/components/title/_title.scss
@@ -1,13 +1,18 @@
-.title-input {
-    width: 100%;
+.title {
     color: $mainColor;
-    .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
-        color: $mainColor;
-        font-size: $text-lg;
-        font-weight: 500;
-    }
 
-    fieldset {
-        display: none;
+    .title-input {
+        width: 100%;
+        color: $mainColor;
+
+        .css-1n4twyu-MuiInputBase-input-MuiOutlinedInput-input {
+            color: $mainColor;
+            font-size: $text-lg;
+            font-weight: 500;
+        }
+
+        fieldset {
+            display: none;
+        }
     }
 }
